feat: add vue-i18n, axios, shadcn-vue, and @ path alias
- Add vue-i18n for internationalization with EN/VI locales
- Configure axios with interceptors and typed HTTP helpers
- Add shadcn-vue with button, card, input, label components
- Configure @ path alias for cleaner imports
- Update all pages to use shadcn-vue Card components
- Add @tanstack/vue-table dependency

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+tsconfig.tsbuildinfo
 *.local
 
 # npm lockfile (project uses pnpm)
@@ -28,3 +29,4 @@ package-lock.json
 
 # Vue Router auto-generated
 typed-router.d.ts
+*.tsbuildinfo
