--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/vue-query": "^5.92.9",
+    "@tanstack/vue-router": "^1.157.18",
     "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^14.1.0",
     "axios": "^1.13.4",
@@ -22,14 +23,13 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.13",
-    "vue-i18n": "^11.2.8",
-    "vue-router": "^4.6.4"
+    "vue-i18n": "^11.2.8"
   },
   "devDependencies": {
+    "@tanstack/router-plugin": "^1.157.18",
     "@types/node": "^25.0.10",
     "@vitejs/plugin-vue": "^5.2.1",
     "typescript": "~5.6.2",
-    "unplugin-vue-router": "^0.19.2",
     "vite": "^6.0.5",
     "vue-tsc": "^2.2.0"
   }
