--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/vue-form": "^1.28.0",
     "@tanstack/vue-query": "^5.92.9",
     "@tanstack/vue-router": "^1.157.18",
     "@tanstack/vue-table": "^8.21.3",
@@ -23,7 +24,8 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.13",
-    "vue-i18n": "^11.2.8"
+    "vue-i18n": "^11.2.8",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.157.18",
